samples/_failures_safe/1761393063_38f327_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a9196e0.c:175: error: expected ‘;’, ‘,’ or ‘)’ at end of input
